--- a/style.css
+++ b/style.css
@@ -78,13 +78,20 @@ button {
   background-color:#e8f4fa;
 }
 .event {
-  font-size: 10px;
-  padding: 3px;
-  background-color: #58bae4;
+  border-width: thin;
+  border-color: black;
+  border-style: solid;
+  width: 98%;
+  position: relative;
+  z-index: 99;
+  font-size: 0.8rem;
+  line-height: 1rem;
+  /* padding: 3px; */
+  /* background-color: #58bae4; */
   color: black;
-  border-radius: 5px;
-  max-height: 55px;
-  overflow: hidden;
+  /* border-radius: 5px; */
+  /* max-height: 55px; */
+  /* overflow: hidden; */
 }
 .padding {
   cursor: default !important;
